# vr-

./: .gitignore  README.md  app.py  environment.yml  pyproject.toml
docs/: IMPROVEMENT_DESIGN.md  application_scenario.md  project_packaging.md  tour_scenario_video_sources.md
scripts/: __init__.py  download_tour_demos.py  make_demo_data.py  make_real360_sample.py  make_shd360_sample.py  prepare_360vsum.py  run_experiment.py  run_full_benchmark.py  run_strict_experiment.py
src/s3_360/: __init__.py  camera_motion.py  data.py  deep_features.py  evaluation.py  events.py  methods.py  segmentation.py  tour.py  tourguide.py  video.py  visualization.py
tests/: test_camera_motion_events.py  test_pipeline.py  test_video_export.py
