[project]
name = "s3-360"
version = "0.1.0"
description = "Saliency-aware, Semantic-diverse and Smooth 360 video summarization prototype."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]
